Initial commit: Mise en ligne appli av interface v2

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ document.addEventListener("DOMContentLoaded", function() {
             headers: {
                 "Content-Type": "application/json",
             },
-            body: JSON.stringify(requestData),
+            body: JSON.stringify(requestData.departement),
         })
         .then(response => {
             if (!response.ok) {
