--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ document.addEventListener("DOMContentLoaded", function() {
         };
         
         // Appel à l'API
-        fetch("https://inondations.onrender.com//predict", {
+        fetch("https://inondations.onrender.com/predict", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
